# amplifier-bundle-shadow

./: README.md  bundle.yaml  pyproject.toml
agents/: shadow-operator.md  shadow-smoke-test.md
behaviors/: shadow.yaml
bundles/: shadow.yaml
container/: Dockerfile  app.ini  build.sh  entrypoint.sh
context/: agent-handoff-protocol.md  host-only-rubric.md  shadow-instructions.md  smoke-test-protocol.md  smoke-test-rubric.md
docs/: ARCHITECTURE.md  TEST_PLAN.md
modules/tool-shadow/: pyproject.toml
modules/tool-shadow/amplifier_module_tool_shadow/: __init__.py
modules/tool-shadow/tool_shadow/: __init__.py
recipes/: shadow-smoke-test.yaml
scripts/: setup-sandbox.sh
src/amplifier_bundle_shadow/: __init__.py  __main__.py  builder.py  cli.py  container.py  environment.py  gitea.py  manager.py  models.py  repos.py  snapshot.py  tool.py
src/amplifier_bundle_shadow/container/: Dockerfile
src/amplifier_bundle_shadow/sandbox/: __init__.py  base.py  direct.py  factory.py  linux.py  macos.py
tests/: __init__.py  conftest.py  test_cli.py  test_environment.py  test_manager.py  test_models.py  test_repos.py  test_sandbox.py  test_security_isolation.py  test_tool_shadow.py
tests/integration/: __init__.py  test_uncommitted_changes.py  test_url_rewriting.py
