[project]
name = "amplifier-bundle-shadow"
version = "0.1.0"
description = "Shadow environments for safely testing Amplifier ecosystem changes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Brian Krabach" }
]
keywords = ["amplifier", "sandbox", "testing", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
amplifier-shadow = "amplifier_bundle_shadow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_bundle_shadow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
