[project]
name = "amplifier-module-tool-shadow"
version = "0.1.0"
description = "Amplifier tool module for shadow environment management"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
    "amplifier-bundle-shadow @ git+https://github.com/microsoft/amplifier-bundle-shadow",
]

[project.entry-points."amplifier.modules"]
tool-shadow = "amplifier_module_tool_shadow:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_shadow"]
