[project]
name = "amplifier-module-tool-shadow"
version = "0.1.0"
description = "Amplifier tool module for shadow environment management"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]

# No runtime dependencies - amplifier-core and amplifier-bundle-shadow are peer dependencies
# (provided by the host app that loads this module)
dependencies = []

[project.entry-points."amplifier.modules"]
tool-shadow = "amplifier_module_tool_shadow:mount"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "amplifier-core",
    "amplifier-bundle-shadow",
]

[tool.uv.sources]
amplifier-core = { path = "../../../amplifier-core", editable = true }
amplifier-bundle-shadow = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_shadow"]
